--- a/src/components/page-blocks/_head.html
+++ b/src/components/page-blocks/_head.html
@@ -2,24 +2,16 @@
 
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport"
-				content="width=device-width, initial-scale=1.0">
-	<meta name="description"
-				content="@@description">
-	<meta name="keywords"
-				content="@@keywords">
-	<link rel="shortcut icon"
-				href="@@favicon.svg"
-				type="image/svg+xml">
-	<link rel="shortcut icon"
-				href="@@favicon.webp"
-				type="image/webp">
-	<link rel="shortcut icon"
-				href="@@favicon.png"
-				type="image/x-icon">
-	<link rel="stylesheet"
-				href="css/libs.min.css">
-	<link rel="stylesheet"
-				href="css/style.min.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="@@description">
+	<meta name="keywords" content="@@keywords">
+	<link rel="shortcut icon" href="@@favicon.svg" type="image/svg+xml">
+	<link rel="shortcut icon" href="@@favicon.webp" type="image/webp">
+	<link rel="shortcut icon" href="@@favicon.png" type="image/x-icon">
+	<link rel="stylesheet" href="css/libs.min.css">
+	<link rel="stylesheet" href="css/style.min.css">
 	<title>@@title</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
