--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,6 @@
 @import 'base/*.scss';
 @import 'global/*.scss';
 @import '**/_*.scss';
+@import '../components/**/_*.scss';
 @import '../components/**/*.scss';
+
